@@ -1,1 +1,1 @@
-from UnicodeSplitter import UnicodeSplitter as Splitter
+
